crates/api-snowflake-rest/src/tests/snapshots/api_snowflake_rest__tests__test_sqls__snowflake_compatibility__select_1.snap
---
source: crates/api-snowflake-rest/src/tests/test_sqls.rs
description: "select 1\nQuery UUID: 00000000-0000-0000-0000-077f2f5f98c3\nSnowflake: \n+---+\n| 1 |\n|---|\n| 1 |\n+---+"
expression: snapshot
info: "historical codes: sqlState: 02000, errorCode: 010001"
---
{
  "data": {
    "rowtype": [
      {
        "name": "Int64(1)",
        "database": "",
        "schema": "",
        "table": "",
        "nullable": false,
        "type": "fixed",
        "byteLength": null,
        "length": null,
        "scale": 0,
        "precision": 38,
        "collation": null
      }
    ],
    "rowsetBase64": null,
    "rowset": [
      [
        1
      ]
    ],
    "total": 1,
    "queryResultFormat": "json",
    "sqlState": "02000",
    "queryId": "UUID"
  },
  "success": true,
  "message": "successfully executed",
  "code": null
}
