crates/api-snowflake-rest/src/tests/snapshots/api_snowflake_rest__tests__test_sqls__snowflake_compatibility__select_1_async.snap
---
source: crates/api-snowflake-rest/src/tests/test_sqls.rs
description: "select 1;>\nQuery UUID: 00000000-0000-0000-0000-077f31d91936\nSnowflake: scheduled query ID"
expression: snapshot
info: "historical codes: sqlState: 2000, errorCode: 10001"
---
{
  "data": {
    "rowtype": [],
    "rowsetBase64": null,
    "rowset": null,
    "total": null,
    "queryResultFormat": null,
    "queryId": "UUID"
  },
  "success": true,
  "message": "successfully executed",
  "code": null
}
