crates/api-snowflake-rest/src/tests/snapshots/api_snowflake_rest__tests__test_sqls__snowflake_compatibility__show_schemas_in_missing_db.snap
---
source: crates/api-snowflake-rest/src/tests/test_sqls.rs
description: "show schemas in database foo\nSnowflake:\n002043 (02000): UUID: SQL compilation error:\nObject does not exist, or operation cannot be performed."
expression: snapshot
info: "historical codes: sqlState: 42503, errorCode: 001001"
---
{
  "data": {
    "rowtype": [],
    "rowsetBase64": null,
    "rowset": null,
    "total": null,
    "queryResultFormat": null,
    "errorCode": "002043",
    "sqlState": "42502",
    "queryId": "UUID"
  },
  "success": false,
  "message": "SQL compilation error: Database 'foo' does not exist or not authorized",
  "code": "002043"
}
